--- a/notice/pom.xml
+++ b/notice/pom.xml
@@ -47,6 +47,11 @@
   
   <!-- 컴파일 or 배포 옵션 -->
   <build>
+  	   <resources>
+	  	   	<resource>
+	  	   		<directory>src/main/resources</directory>
+	  	   	</resource>
+  	   </resources>
   	   <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
