--- a/notice/pom.xml
+++ b/notice/pom.xml
@@ -42,7 +42,16 @@
 	    <version>1.18.26</version>
 	    <scope>provided</scope>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.servlets/cos -->
+	<dependency>
+	    <groupId>com.servlets</groupId>
+	    <artifactId>cos</artifactId>
+	    <version>05Nov2002</version>
+	</dependency>
 
+
+	
   </dependencies>
   
   <!-- 컴파일 or 배포 옵션 -->
